--- a/WebMVC/Views/student/index.cshtml
+++ b/WebMVC/Views/student/index.cshtml
@@ -1,5 +1,3 @@
-<h1> @ViewBag.Message</h1>
-
 <form asp-action="Index" method="post">
     <label>Nhap StudentID:</label>
     <input type="text" name="StudentID">
@@ -8,5 +6,6 @@
     <label>Nhap Dia Chi:</label>
     <input type="number" name="Address">
    
-    <input type="submit" value="Gui du lieu">
+    <input type="submit" value="Send">
 </form>
+<h1> @ViewBag.Message</h1>
