--- a/WebMVC/Views/student/index.cshtml
+++ b/WebMVC/Views/student/index.cshtml
@@ -5,6 +5,8 @@
     <input type="text" name="Name">
     <label>Nhap Dia Chi:</label>
     <input type="number" name="Address">
+   <label>Nhap email:</label>
+    <input type="number" name="Email">
    
     <input type="submit" value="Send">
 </form>
